# DimensionalAnalysis

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  cmake.py  configuration.py  description.json  description.py  fetch_subprojects.py
.github/workflows/: ContinuousIntegration.yml
.metaconfigure/: description.json
.travis/: build.sh  signature.sh
cmake/: develop_dependencies.cmake  dimwits_dependencies.cmake  release_dependencies.cmake  unit_testing.cmake
metaconfigure/: cmake.py  configuration.py  description.json  fetch_subprojects.py
metaconfigure/docs/: index.md
src/: dimwits.hpp
src/dimwits/: basis.hpp  cmath.hpp  constants.hpp  conversion.hpp  detail.hpp  dimension.hpp  math.hpp  numeric_limits.hpp  quantity.hpp  ratio.hpp  scale.hpp  unit.hpp
src/dimwits/basis/test/: CMakeLists.txt  basis.test.cpp
src/dimwits/conversion/test/: CMakeLists.txt  factorValue.test.cpp
src/dimwits/detail/: operation.hpp
src/dimwits/detail/operation/src/: division.hpp  exponentiation.hpp  multiply.hpp
src/dimwits/detail/src/: definition.hpp  isBasis.hpp  map.hpp
src/dimwits/dimension/: operation.hpp
src/dimwits/dimension/operation/src/: definition.hpp  exponentiation.hpp  multiply.hpp
src/dimwits/dimension/src/: isBasis.hpp
src/dimwits/dimension/test/: CMakeLists.txt  isBasis.test.cpp  operation.test.cpp
src/dimwits/math/test/: CMakeLists.txt  math.test.cpp
src/dimwits/numeric_limits/test/: CMakeLists.txt  numeric_limits.test.cpp
src/dimwits/quantity/: Type.hpp  operation.hpp
src/dimwits/quantity/operation/src/: addition.hpp  assignment.hpp  division.hpp  equality.hpp  exponentiation.hpp  less.hpp  multiplication.hpp  output.hpp  subtraction.hpp  unary.hpp
src/dimwits/quantity/test/: CMakeLists.txt  operations.test.cpp  quantity.test.cpp
src/dimwits/ratio/src/: add.hpp  divide.hpp  equality.hpp  greatestCommonFactor.hpp  less.hpp  make.hpp  multiply.hpp  reduce.hpp  subtract.hpp
src/dimwits/ratio/test/: CMakeLists.txt  add.test.cpp  divide.test.cpp  equality.test.cpp  greatestCommonFactor.test.cpp  less.test.cpp  make.test.cpp  multiply.test.cpp  ratio.test.cpp  reduce.test.cpp  subtract.test.cpp
src/dimwits/scale/test/: CMakeLists.txt  dimensionality.test.cpp  factor.test.cpp  referenceUnitRatio.test.cpp  scale.test.cpp  symbol.test.cpp
src/dimwits/unit/: definitions.hpp  macros.hpp  operation.hpp
src/dimwits/unit/operation/src/: division.hpp  exponentiation.hpp  multiply.hpp
src/dimwits/unit/src/: dimensionality.hpp  isComposite.hpp  referenceUnit.hpp  symbol.hpp
src/dimwits/unit/test/: .#symbol.test.cpp  CMakeLists.txt  dimensionality.test.cpp  isComposite.test.cpp  referenceUnit.test.cpp  symbol.test.cpp  unit.test.cpp
src/test/: CMakeLists.txt  example.cpp
