add_executable( basis.test basis.test.cpp )
set( test_flags ${dimwits_compiler_flags} )
separate_arguments( test_flags )
foreach( flag IN LISTS test_flags )
    target_compile_options( basis.test PUBLIC ${flag} )
endforeach( flag )
set_target_properties( basis.test PROPERTIES LINK_FLAGS "${dimwits_compiler_flags}" )
target_link_libraries( basis.test PUBLIC dimwits )
add_test( NAME basis COMMAND basis.test ) 
