add_executable( math.test math.test.cpp )
set( test_flags ${dimwits_compiler_flags} )
separate_arguments( test_flags_list UNIX_COMMAND "${test_flags}" )
foreach( flag IN LISTS test_flags_list )
    target_compile_options( math.test PUBLIC ${flag} )
endforeach( flag )
set_target_properties( math.test PROPERTIES LINK_FLAGS "${test_flags}" )
target_link_libraries( math.test PUBLIC dimwits )
add_test( NAME math COMMAND math.test ) 
