add_executable( numeric_limits.test numeric_limits.test.cpp )
set( test_flags ${dimwits_compiler_flags} )
separate_arguments( test_flags_list UNIX_COMMAND "${test_flags}" )
foreach( flag IN LISTS test_flags_list )
    target_compile_options( numeric_limits.test PUBLIC ${flag} )
endforeach( flag )
set_target_properties( numeric_limits.test PROPERTIES LINK_FLAGS "${test_flags}" )
target_link_libraries( numeric_limits.test PUBLIC dimwits )
add_test( NAME numeric_limits COMMAND numeric_limits.test ) 
